--- a/app/css/header_menu.css
+++ b/app/css/header_menu.css
@@ -546,7 +546,7 @@ body.t-body {
 
 .header__private .header__menu-small::-webkit-scrollbar,
 .header__private .header__menu-big::-webkit-scrollbar {
-  display: none; }
+  width: 0; }
 
 .m__short {
   display: none; }
@@ -599,10 +599,13 @@ body.t-body {
     padding-right: 15px; } }
 
 @media (max-width: 1100px) {
+  .header__private .header__menu-overflow,
+  .footer_private .header__menu-overflow {
+    overflow: hidden;
+    width: 100%; }
   .header__private .header__menu-small {
     overflow-x: scroll;
-    white-space: nowrap;
-    margin-bottom: -10px; }
+    white-space: nowrap; }
   .header__private .header__menu-big {
     padding-bottom: 20px !important; }
   .header__private .header__menu-overflow,
