--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -166,7 +166,7 @@ header.header__private {
     }
 }
 
-@media (max-width: 990px) {
+@media (max-width: 989px) {
     .header__private {
         .container-fluid {
             overflow-y: hidden;
@@ -190,21 +190,32 @@ header.header__private {
     }
 }
 
-@media (max-width: 450px) {
-    .header__private .container-fluid {
-        overflow-x: hidden;
-    }
-}
-
+// @media (max-width: 450px) {
+//     .header__private .container-fluid {
+//         overflow-x: hidden;
+//     }
+// }
 @media (max-width: 1600px) {
-    .header__private .container-fluid {
-        width: auto;
+    .header__private {
+        .container-fluid {
+            width: auto;
+        }
+        .header__menu-big a {
+            margin-bottom: 10px;
+            margin-right: 5px;
+        }
     }
 }
 
 @media (min-width: 990px) {
-    .header__private a.header__tel-btn {
-        margin-right: 20px;
+    .header__private {
+        a.header__tel-btn {
+            margin-right: 20px;
+        }
+        .container-fluid__menu {
+            padding-left: 3rem !important;
+            padding-right: 3rem !important;
+        }
     }
 }
 
@@ -219,7 +230,7 @@ header.header__private {
     }
 }
 
-@media (max-width: 1600px) {
+@media (min-width: 1600px) {
     .header__private {
         .container-fluid {
             padding-left: 9rem;
