--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3838,7 +3838,6 @@ body.t-body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: 18px;
   margin-right: -5px;
   margin-left: -5px; }
   .header__private .header__menu-big a {
@@ -3878,7 +3877,6 @@ body.t-body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  margin-bottom: 25px;
   white-space: nowrap;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -3930,43 +3928,25 @@ body.t-body {
 .m__short {
   display: none; }
 
-@media (max-width: 576px) {
-  .header__menu-big a:last-child {
-    padding-right: calc( 6vw); } }
-
-@media (min-width: 930px) and (max-width: 990px) {
-  .header__private .header__menu-big {
-    padding-bottom: 35px; } }
-
 @media (max-width: 990px) {
-  .header__private .header__menu-small,
-  .header__private .header__menu-big {
-    margin-bottom: -20px;
-    padding-bottom: 20px; }
   .header__private .header__menu-small {
     overflow-x: scroll;
     white-space: nowrap;
-    margin-bottom: -10px;
-    padding-bottom: 30px; }
+    margin-bottom: -20px;
+    padding-bottom: 3px; }
   .header__private .header__menu-big-item {
     margin-bottom: 15px; }
-  .header__menu-big a {
-    margin-right: 1.6rem; }
-  .header__menu-big a {
-    margin-right: 1.6rem;
-    white-space: nowrap; }
-  .header__menu-small a {
-    white-space: nowrap; }
-  .header__menu-small a:last-child {
-    padding-right: 15px; }
+  .header__private .header__menu {
+    padding-top: 5px; }
   .header__private .header__menu-big {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-flow: row nowrap;
             flex-flow: row nowrap;
     overflow: auto;
-    margin-bottom: -10px;
-    margin-right: 0; }
+    margin-bottom: -20px;
+    margin-right: 0;
+    padding-bottom: 20px; }
   .header__private .header__menu-big a {
     margin-right: 1.6rem; }
   .header__private .header__menu-big a {
@@ -3975,37 +3955,43 @@ body.t-body {
   .header__private .header__menu-small a {
     white-space: nowrap; }
   .header__private .header__menu-small a:last-child {
+    padding-right: 15px; }
+  .header__private .header__menu-big a:last-child {
+    padding-right: calc( 6vw); }
+  .header__menu-big a {
+    margin-right: 1.6rem; }
+  .header__menu-big a {
+    margin-right: 1.6rem;
+    white-space: nowrap; }
+  .header__menu-small a {
+    white-space: nowrap; }
+  .header__menu-small a:last-child {
     padding-right: 15px; } }
 
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .header__private .header__menu-overflow,
   .footer_private .header__menu-overflow {
-    overflow: hidden;
-    width: 100%; }
+    overflow: hidden; }
   .header__private .header__menu-small {
     overflow-x: scroll;
     white-space: nowrap; }
-  .header__private .header__menu-big {
-    padding-bottom: 20px !important; }
   .header__private .header__menu-overflow,
   .footer_private .header__menu-overflow {
     overflow: hidden; } }
 
-@media (max-width: 1400px) {
+@media (max-width: 1440px) {
   .header__private .header__menu-big {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start; }
-  .header__menu-small-item-right {
+  .header__private .header__menu-small-item-right {
     text-align: left; }
-  .m__long {
+  .header__private .header__menu-big-item {
+    margin-right: 30px; }
+  .header__private .m__long {
     display: none; }
-  .m__short {
+  .header__private .m__short {
     display: inline-block; } }
-
-@media (max-width: 1440px) {
-  .header__menu-big-item {
-    margin-right: 30px; } }
 
 @media (max-width: 1600px) {
   .header__menu-big a {
@@ -4497,7 +4483,7 @@ header.header__private {
   padding-top: 12px;
   padding-bottom: 12px; }
 
-@media (max-width: 990px) {
+@media (max-width: 989px) {
   .header__private .container-fluid {
     overflow-y: hidden;
     padding-left: 6vw;
@@ -4514,17 +4500,19 @@ header.header__private {
   .header__private .header__lang {
     display: inline-block; } }
 
-@media (max-width: 450px) {
-  .header__private .container-fluid {
-    overflow-x: hidden; } }
-
 @media (max-width: 1600px) {
   .header__private .container-fluid {
-    width: auto; } }
+    width: auto; }
+  .header__private .header__menu-big a {
+    margin-bottom: 10px;
+    margin-right: 5px; } }
 
 @media (min-width: 990px) {
   .header__private a.header__tel-btn {
-    margin-right: 20px; } }
+    margin-right: 20px; }
+  .header__private .container-fluid__menu {
+    padding-left: 3rem !important;
+    padding-right: 3rem !important; } }
 
 @media (max-width: 1440px) {
   .header__private .header__menu-big-item {
@@ -4534,7 +4522,7 @@ header.header__private {
         -ms-flex-align: center;
             align-items: center; } }
 
-@media (max-width: 1600px) {
+@media (min-width: 1600px) {
   .header__private .container-fluid {
     padding-left: 9rem;
     padding-right: 9rem; }
