--- a/app/css/header_menu.css
+++ b/app/css/header_menu.css
@@ -459,8 +459,8 @@ body.t-body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-right: -5px;
-  margin-left: -5px; }
+  margin-left: -5px;
+  padding-bottom: 0; }
   .header__private .header__menu-big a {
     font-size: 1.2rem;
     font-family: "HSE Sans";
@@ -468,7 +468,6 @@ body.t-body {
     font-weight: 600;
     line-height: 1.2;
     letter-spacing: normal;
-    margin-right: 10px;
     padding-left: 5px;
     padding-right: 5px; }
     .header__private .header__menu-big a:hover {
@@ -480,7 +479,8 @@ body.t-body {
     padding-left: 5px;
     padding-right: 5px; }
 
-.draggable {
+.header__private .header__menu-big,
+.header__private .header__menu-small {
   white-space: nowrap;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -549,11 +549,14 @@ body.t-body {
 .m__short {
   display: none; }
 
+@media (min-width: 900px) and (max-width: 989px) {
+  .header__private .header__menu-big {
+    padding-bottom: 20px; } }
+
 @media (max-width: 990px) {
   .header__private .header__menu-small {
     overflow-x: scroll;
     white-space: nowrap;
-    margin-bottom: -20px;
     padding-bottom: 3px; }
   .header__private .header__menu-big-item {
     margin-bottom: 15px; }
@@ -565,13 +568,8 @@ body.t-body {
         -ms-flex-flow: row nowrap;
             flex-flow: row nowrap;
     overflow: auto;
-    margin-bottom: -20px;
-    margin-right: 0;
-    padding-bottom: 20px; }
+    margin-right: 0; }
   .header__private .header__menu-big a {
-    margin-right: 1.6rem; }
-  .header__private .header__menu-big a {
-    margin-right: 1.6rem;
     white-space: nowrap; }
   .header__private .header__menu-small a {
     white-space: nowrap; }
@@ -579,15 +577,14 @@ body.t-body {
     padding-right: 15px; }
   .header__private .header__menu-big a:last-child {
     padding-right: calc( 6vw); }
-  .header__menu-big a {
-    margin-right: 1.6rem; }
-  .header__menu-big a {
-    margin-right: 1.6rem;
-    white-space: nowrap; }
   .header__menu-small a {
     white-space: nowrap; }
   .header__menu-small a:last-child {
     padding-right: 15px; } }
+
+@media (min-width: 990px) and (max-width: 1100px) {
+  .header__private .header__menu-big {
+    margin-bottom: 10px; } }
 
 @media (max-width: 1200px) {
   .header__private .header__menu-overflow,
@@ -600,6 +597,10 @@ body.t-body {
   .footer_private .header__menu-overflow {
     overflow: hidden; } }
 
+@media (min-width: 1200px) {
+  .header__private .header__menu-small {
+    margin-bottom: 10px; } }
+
 @media (max-width: 1440px) {
   .header__private .header__menu-big {
     -webkit-box-pack: start;
@@ -607,8 +608,6 @@ body.t-body {
             justify-content: flex-start; }
   .header__private .header__menu-small-item-right {
     text-align: left; }
-  .header__private .header__menu-big-item {
-    margin-right: 30px; }
   .header__private .m__long {
     display: none; }
   .header__private .m__short {
@@ -616,5 +615,4 @@ body.t-body {
 
 @media (max-width: 1600px) {
   .header__menu-big a {
-    margin-bottom: 10px;
-    margin-right: 5px; } }
+    margin-bottom: 10px; } }
