--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3930,7 +3930,7 @@ body.t-body {
 
 @media (min-width: 900px) and (max-width: 989px) {
   .header__private .header__menu-big {
-    padding-bottom: 20px; } }
+    padding-bottom: 15px; } }
 
 @media (max-width: 990px) {
   .header__private .header__menu-small {
@@ -3949,7 +3949,8 @@ body.t-body {
     overflow: auto;
     margin-right: 0; }
   .header__private .header__menu-big a {
-    white-space: nowrap; }
+    white-space: nowrap;
+    padding-top: 20px; }
   .header__private .header__menu-small a {
     white-space: nowrap; }
   .header__private .header__menu-small a:last-child {
