--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -200,10 +200,10 @@ header.header__private {
         .container-fluid {
             width: auto;
         }
-        .header__menu-big a {
-            margin-bottom: 10px;
-            margin-right: 15px;
-        }
+        // .header__menu-big a {
+        //     margin-bottom: 10px;
+        //     margin-right: 15px;
+        // }
     }
 }
 
@@ -237,7 +237,7 @@ header.header__private {
             padding-right: 9rem;
         }
         .header__menu-big a {
-            margin-bottom: 10px;
+            // margin-bottom: 10px;
             margin-right: 5px;
         }
         .container-fluid__menu {
