--- a/app/sass/header_menu.scss
+++ b/app/sass/header_menu.scss
@@ -105,13 +105,17 @@
     display: none;
 }
 
-// @media (min-width: 900px) and (max-width:989px) {
-//     .header__private {
-//         .header__menu-big {
-//             padding-bottom: 10px;
-//         }
-//     }
-// }
+@media (min-width: 900px) and (max-width:989px) {
+    .header__private {
+        .header__menu-big {
+            padding-bottom: 10px;
+        }
+        .header__menu-big a {
+            margin-bottom: 15px;
+        }
+    }
+}
+
 @media (max-width: 990px) {
     .header__private {
         .header__menu-small {
