--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -236,10 +236,10 @@ header.header__private {
             padding-left: 9rem;
             padding-right: 9rem;
         }
-        .header__menu-big a {
-            // margin-bottom: 10px;
-            margin-right: 5px;
-        }
+        // .header__menu-big a {
+        //     // margin-bottom: 10px;
+        //     margin-right: 5px;
+        // }
         .container-fluid__menu {
             padding-left: 3rem;
             padding-right: 3rem;
