--- a/app/css/header_menu.css
+++ b/app/css/header_menu.css
@@ -32,7 +32,7 @@
     .header__private .header__menu-big a:hover {
       color: grey; }
     .header__private .header__menu-big a:last-child {
-      margin-right: -5px; }
+      margin-right: 0; }
   .header__private .header__menu-big a.active {
     border-bottom: 3px solid black;
     padding-left: 5px;
@@ -108,6 +108,12 @@
 .m__short {
   display: none; }
 
+@media (min-width: 900px) and (max-width: 989px) {
+  .header__private .header__menu-big {
+    padding-bottom: 10px; }
+  .header__private .header__menu-big a {
+    margin-bottom: 15px; } }
+
 @media (max-width: 990px) {
   .header__private .header__menu-small {
     overflow-x: scroll;
@@ -139,10 +145,6 @@
   .header__menu-small a:last-child {
     padding-right: 15px; } }
 
-@media (min-width: 990px) and (max-width: 1100px) {
-  .header__private .header__menu-big {
-    margin-bottom: 10px; } }
-
 @media (max-width: 1200px) {
   .header__private .header__menu-overflow,
   .footer_private .header__menu-overflow {
@@ -172,5 +174,5 @@
 
 @media (max-width: 1600px) {
   .header__menu-big a {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     margin-right: 15px; } }
