--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2969,7 +2969,7 @@ body.t-body {
     .header__private .header__menu-big a:hover {
       color: grey; }
     .header__private .header__menu-big a:last-child {
-      margin-right: -5px; }
+      margin-right: 0; }
   .header__private .header__menu-big a.active {
     border-bottom: 3px solid black;
     padding-left: 5px;
@@ -3045,6 +3045,12 @@ body.t-body {
 .m__short {
   display: none; }
 
+@media (min-width: 900px) and (max-width: 989px) {
+  .header__private .header__menu-big {
+    padding-bottom: 10px; }
+  .header__private .header__menu-big a {
+    margin-bottom: 15px; } }
+
 @media (max-width: 990px) {
   .header__private .header__menu-small {
     overflow-x: scroll;
@@ -3076,10 +3082,6 @@ body.t-body {
   .header__menu-small a:last-child {
     padding-right: 15px; } }
 
-@media (min-width: 990px) and (max-width: 1100px) {
-  .header__private .header__menu-big {
-    margin-bottom: 10px; } }
-
 @media (max-width: 1200px) {
   .header__private .header__menu-overflow,
   .footer_private .header__menu-overflow {
@@ -3109,7 +3111,7 @@ body.t-body {
 
 @media (max-width: 1600px) {
   .header__menu-big a {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     margin-right: 15px; } }
 
 header.header__private {
@@ -3637,8 +3639,6 @@ header.header__private {
   .header__private .container-fluid {
     padding-left: 9rem;
     padding-right: 9rem; }
-  .header__private .header__menu-big a {
-    margin-right: 5px; }
   .header__private .container-fluid__menu {
     padding-left: 3rem;
     padding-right: 3rem; } }
