--- a/app/sass/header_menu.scss
+++ b/app/sass/header_menu.scss
@@ -34,7 +34,7 @@
             color: grey;
         }
         &:last-child {
-            margin-right: -5px;
+            margin-right: 0;
         }
     }
     a.active {
@@ -169,14 +169,13 @@
     }
 }
 
-@media (min-width: 990px) and (max-width:1100px) {
-    .header__private {
-        .header__menu-big {
-            margin-bottom: 10px;
-        }
-    }
-}
-
+// @media (min-width: 990px) and (max-width:1100px) {
+//     .header__private {
+//         .header__menu-big {
+//             margin-bottom: 10px;
+//         }
+//     }
+// }
 @media (max-width: 1200px) {
     .header__private .header__menu-overflow,
     .footer_private .header__menu-overflow {
@@ -233,7 +232,7 @@
 
 @media (max-width: 1600px) {
     .header__menu-big a {
-        margin-bottom: 5px;
+        margin-bottom: 10px;
         margin-right: 15px;
         // margin-right: 5px;
     }
